refactor: response 수정
- response dto 추가, 수정
- mapper 추가
- mapper 적용
- 사용하지 않게된 dto 제거, 수정